
        [float]
        ===== Features

        [float]
        ===== Bug fixes

        [float]
        ===== Chores

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

[float]
===== Chores

* Add default ports into `context.service.target.name` for HTTP spans conforming to the
  spec update done in https://github.com/elastic/apm/pull/700 ({pull}3590[#3590])


[[release-notes-3.49.1]]
==== 3.49.1 - 2023/08/09

[float]
===== Bug fixes

* Upgrade import-in-the-middle dependency to v1.4.2 to fix a vulnerability
  (https://github.com/DataDog/import-in-the-middle/security/advisories/GHSA-5r27-rw8r-7967[CVE-2023-38704]).
  Note: This dependency is only used by elastic-apm-node when using the
  <<esm,experimental ESM support>>. ({pull}3569[#3569])

[float]
===== Chores

* Add debug logging for 4xx responses from APM server when polling for
  central config. This is based on https://github.com/elastic/apm-nodejs-http-client/pull/182
  by @linjunpop.


[[release-notes-3.49.0]]
==== 3.49.0 - 2023/08/03

[float]
===== Bug fixes

* Fix ESM support: the "loader.mjs" file was accidentally not included in
  the published package in v3.48.0. ({pull}3534[#3534])

* Fix instrumentation of `@aws-sdk/client-s3` from v3.378.0 and up. The new
  version requires `@smithy/smithy-client` v2.0.1 and the agent was
  instrumenting it within the semver range '>=1 <2'. ({issues}3523[#3523])

* Fix wrapping of `http.request()` for node v18.17.0. Before this change, a
  call with a non-Function callback -- `http.request(urlString, {}, 'this-is-not-a-cb-function')`
  -- would accidentally *not* fail because of the agent's instrumentation.
  ({pull}3511[#3511])

* Fix tedious instrumentation to recognize "connection.prepare()" usage in