@@ -10,6 +10,7 @@ const semver = require('semver');
 
 const { getDBDestination } = require('../context');
 const shimmer = require('../shimmer');
+const kListenersAdded = Symbol('kListenersAdded');
 
 // Match expected `<hostname>:<port>`, e.g. "mongo:27017", "::1:27017",
 // "127.0.0.1:27017".
@@ -52,6 +53,7 @@ module.exports = (mongodb, agent, { version, enabled }) => {
         this.on('commandStarted', onStart);
         this.on('commandSucceeded', onEnd);
         this.on('commandFailed', onEnd);
+        this[kListenersAdded] = true;
       }
     }
     Object.defineProperty(mongodb, 'MongoClient', {
@@ -60,6 +62,7 @@ module.exports = (mongodb, agent, { version, enabled }) => {
         return MongoClientTraced;
       },
     });
+
     shimmer.wrap(mongodb.MongoClient, 'connect', wrapConnect);
   } else {
     agent.logger.warn('could not instrument mongodb@%s', version);
@@ -70,6 +73,14 @@ module.exports = (mongodb, agent, { version, enabled }) => {
   // It calls back with `function (err, client)` or returns a Promise that
   // resolves to the client.
   // https://github.com/mongodb/node-mongodb-native/blob/v4.2.1/src/mongo_client.ts#L503-L511
+  //
+  // From versions >=4.11.0 the method uses `new this` to create the client instance. Hence
+  // our `MongoClientTraced`'s constructor is used and the command listeners are already
+  // registered. We should check if the client has already added the listeners to avoid handling
+  // the same events twice
+  // NOTE: prefering to use a Symbol over version check since internal implementation may
+  // change in future versions
+  // https://github.com/mongodb/node-mongodb-native/blob/v4.11.0/src/mongo_client.ts#L618
   function wrapConnect(origConnect) {
     return function wrappedConnect(url, options, callback) {
       if (typeof options === 'function') {
@@ -89,9 +100,12 @@ module.exports = (mongodb, agent, { version, enabled }) => {
             if (err) {
               callback(err);
             } else {
-              client.on('commandStarted', onStart);
-              client.on('commandSucceeded', onEnd);
-              client.on('commandFailed', onEnd);
+              if (!client[kListenersAdded]) {
+                client.on('commandStarted', onStart);
+                client.on('commandSucceeded', onEnd);
+                client.on('commandFailed', onEnd);
+                client[kListenersAdded] = true;
+              }
               callback(err, client);
             }
           },
@@ -99,9 +113,12 @@ module.exports = (mongodb, agent, { version, enabled }) => {
       } else {
         const p = origConnect.call(this, url, options, callback);
         p.then((client) => {
-          client.on('commandStarted', onStart);
-          client.on('commandSucceeded', onEnd);
-          client.on('commandFailed', onEnd);
+          if (!client[kListenersAdded]) {
+            client.on('commandStarted', onStart);
+            client.on('commandSucceeded', onEnd);
+            client.on('commandFailed', onEnd);
+            client[kListenersAdded] = true;
+          }
         });
         return p;
       }
